--- a/Himinn_Engine/QBert/QBert.vcxproj
+++ b/Himinn_Engine/QBert/QBert.vcxproj
@@ -175,7 +175,9 @@ xcopy "$(SolutionDir)3rdParty\SDL2_ttf\lib\$(PlatformTarget)\*.dll" "$(OutputPat
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="CoilyComponent.cpp" />
     <ClCompile Include="Commands.cpp" />
+    <ClCompile Include="EnemyComponent.cpp" />
     <ClCompile Include="EnemyManager.cpp" />
     <ClCompile Include="Game.cpp" />
     <ClCompile Include="GridComponent.cpp" />
@@ -184,7 +186,7 @@ xcopy "$(SolutionDir)3rdParty\SDL2_ttf\lib\$(PlatformTarget)\*.dll" "$(OutputPat
     <ClCompile Include="LiftComponent.cpp" />
     <ClCompile Include="ManagerObserver.cpp" />
     <ClCompile Include="NodeComponent.cpp" />
-    <ClCompile Include="CharacterComponent.cpp" />
+    <ClCompile Include="ControllerComponent.cpp" />
     <ClCompile Include="NodeObserver.cpp" />
     <ClCompile Include="PlayerManagerComponent.cpp" />
     <ClCompile Include="PlayerObserver.cpp" />
@@ -194,7 +196,9 @@ xcopy "$(SolutionDir)3rdParty\SDL2_ttf\lib\$(PlatformTarget)\*.dll" "$(OutputPat
     <ClCompile Include="UggAndWrongwayComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="CoilyComponent.h" />
     <ClInclude Include="Commands.h" />
+    <ClInclude Include="ControllableComponent.h" />
     <ClInclude Include="EnemyComponent.h" />
     <ClInclude Include="EnemyManager.h" />
     <ClInclude Include="Game.h" />
@@ -204,7 +208,7 @@ xcopy "$(SolutionDir)3rdParty\SDL2_ttf\lib\$(PlatformTarget)\*.dll" "$(OutputPat
     <ClInclude Include="LiftComponent.h" />
     <ClInclude Include="ManagerObserver.h" />
     <ClInclude Include="NodeComponent.h" />
-    <ClInclude Include="CharacterComponent.h" />
+    <ClInclude Include="ControllerComponent.h" />
     <ClInclude Include="NodeObserver.h" />
     <ClInclude Include="PlayerManagerComponent.h" />
     <ClInclude Include="PlayerObserver.h" />
