--- a/Himinn_Engine/QBert/imgui.ini
+++ b/Himinn_Engine/QBert/imgui.ini
@@ -4,17 +4,22 @@ Size=400,400
 Collapsed=0
 
 [Window][Select Mode]
-Pos=496,9
+Pos=251,74
 Size=136,127
 Collapsed=0
 
 [Window][How To Play]
-Pos=96,147
-Size=451,167
+Pos=91,217
+Size=452,209
 Collapsed=0
 
 [Window][Dear ImGui Demo]
 Pos=-309,38
 Size=738,680
+Collapsed=0
+
+[Window][End Menu]
+Pos=198,115
+Size=238,182
 Collapsed=0
 
