--- a/Himinn_Engine/QBert/QBert.vcxproj
+++ b/Himinn_Engine/QBert/QBert.vcxproj
@@ -177,6 +177,7 @@ xcopy "$(SolutionDir)3rdParty\SDL2_ttf\lib\$(PlatformTarget)\*.dll" "$(OutputPat
   <ItemGroup>
     <ClCompile Include="CoilyComponent.cpp" />
     <ClCompile Include="Commands.cpp" />
+    <ClCompile Include="EndMenuComponent.cpp" />
     <ClCompile Include="EnemyComponent.cpp" />
     <ClCompile Include="EnemyManagerComponent.cpp" />
     <ClCompile Include="Game.cpp" />
@@ -194,12 +195,13 @@ xcopy "$(SolutionDir)3rdParty\SDL2_ttf\lib\$(PlatformTarget)\*.dll" "$(OutputPat
     <ClCompile Include="QBertComponent.cpp" />
     <ClCompile Include="SlickAndSamComponent.cpp" />
     <ClCompile Include="UggAndWrongwayComponent.cpp" />
-    <ClCompile Include="UIComponent.cpp" />
+    <ClCompile Include="MainMenuComponent.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="CoilyComponent.h" />
     <ClInclude Include="Commands.h" />
     <ClInclude Include="ControllableComponent.h" />
+    <ClInclude Include="EndMenuComponent.h" />
     <ClInclude Include="EnemyComponent.h" />
     <ClInclude Include="EnemyManagerComponent.h" />
     <ClInclude Include="Game.h" />
@@ -216,7 +218,7 @@ xcopy "$(SolutionDir)3rdParty\SDL2_ttf\lib\$(PlatformTarget)\*.dll" "$(OutputPat
     <ClInclude Include="QBertComponent.h" />
     <ClInclude Include="SlickAndSamComponent.h" />
     <ClInclude Include="UggAndWrongwayComponent.h" />
-    <ClInclude Include="UIComponent.h" />
+    <ClInclude Include="MainMenuComponent.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
